Project

General

Profile

Actions

Bug #8822

closed

Incorrect encoding for ENV in Windows

Bug #8822: Incorrect encoding for ENV in Windows

Added by davispuh (Dāvis Mosāns) about 13 years ago. Updated over 10 years ago.

Status:
Closed
Assignee:
Target version:
-
ruby -v:
ruby 2.0.0p247 (2013-06-27) [x64-mingw32]
Backport:
[ruby-core:56822]

Description

When reading ENV and if it contains non-ASCII - string won't have correct encoding.
In Ruby 2.0 we can force it to UTF8 (it doesn't matter what's windows encoding nor consoles) and it will be correct, but in Ruby 1.9 there's no way to correctly read it.

Writing non-ASCII string to ENV is not possible at all neither of versions.

Also Ruby1.9 fails to read ENV with name witch contains non-ASCII

Here's test.rb script (basically set environment variable outside of ruby and in ruby print it out)

Output on Ruby2.0 and on Ruby1.9

Seems it wasn't properly fixed in #5570

Actions

Also available in: PDF Atom