test/ruby/test_env.rb
@@ -482,5 +482,16 @@ class TestEnv < Test::Unit::TestCase
         500.times(&doit)
       end;
     end
+
+    if Encoding.find("locale") == Encoding::UTF_8
+      def test_utf8
+        text = "testing åáâäãāあ"
+        test = ENV["test"]
+        ENV["test"] = text
+        assert_equal text, ENV["test"]
+      ensure
+        ENV["test"] = test
+      end
+    end
   end
 end
